<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_view_23_white_top_flat"
        android:orientation="vertical">

        <com.view.MTextView
            android:id="@+id/topTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:textAlignment="center"
            android:textColor="@color/text23Pro_Dark"
            android:textSize="@dimen/_14ssp"
            app:customTypeFace="@string/system_semi_bold"
            tools:text="@string/app_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_11sdp"
            android:background="@color/view23ProBG_Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical">

                <com.view.MTextView
                    android:id="@+id/headerTitleTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_11ssp"
                    app:customTypeFace="@string/system_medium"
                    tools:text="@string/app_name" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    app:srcCompat="@drawable/ic_audio_record_1" />
            </LinearLayout>

            <com.view.MTextView
                android:id="@+id/noteTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textSize="@dimen/_11ssp"
                app:customTypeFace="@string/system_regular"
                tools:text="@string/app_name" />

            <include
                android:id="@+id/startAudioBtn"
                layout="@layout/btn_type_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_btn_height"
                android:layout_marginTop="@dimen/_15sdp" />

            <com.view.MTextView
                android:id="@+id/cancelBtnTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:padding="@dimen/_7sdp"
                android:textAlignment="center"
                android:textColor="@color/text23Pro_Dark"
                android:textSize="@dimen/_14ssp"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="cancel" />
        </LinearLayout>
    </LinearLayout>
</layout>