<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_7sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingEnd="@dimen/_7sdp"
            android:paddingBottom="@dimen/_12sdp"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_tip"
                app:tint="@color/appThemeColor_1" />

            <com.view.MTextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_btn_height"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_16"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="@string/app_name" />

            <com.view.MTextView
                android:id="@+id/msgTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_14"
                app:customTypeFace="@string/system_regular"
                tools:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <com.view.MTextView
                    android:id="@+id/skipTxtArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textColor="@color/appThemeColor_1"
                    android:textSize="@dimen/txt_size_16"
                    app:customTypeFace="@string/system_medium"
                    tools:text="Cancel" />

                <com.view.MTextView
                    android:id="@+id/addNowTxtArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_border"
                    android:gravity="center"
                    android:paddingTop="@dimen/_7sdp"
                    android:paddingBottom="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size_16"
                    app:customTypeFace="@string/system_medium"
                    tools:text="OK" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>