<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_view_23_white_top_flat"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            app:srcCompat="@drawable/ic_audio_record_1" />

        <com.view.MTextView
            android:id="@+id/topTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp"
            android:textAlignment="center"
            android:textColor="@color/text23Pro_Dark"
            android:textSize="@dimen/_14ssp"
            app:customTypeFace="@string/system_semi_bold"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/_11sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/audioPlayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

            <SeekBar
                android:id="@+id/audioSeekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <com.view.MTextView
                android:id="@+id/audioTimeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text23Pro_Light"
                android:textSize="@dimen/_10ssp"
                app:customTypeFace="@string/system_regular"
                tools:text="00:00" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@color/view23ProBG_Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp">

            <com.view.MTextView
                android:id="@+id/noteTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/text23Pro_Dark"
                android:textSize="@dimen/_11ssp"
                app:customTypeFace="@string/system_medium"
                tools:text="@string/app_name" />

            <com.view.MTextView
                android:id="@+id/whatWentMsgTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/text23Pro_Dark"
                android:textSize="@dimen/_12ssp"
                app:customTypeFace="@string/system_bold"
                tools:text="@string/app_name" />

            <com.view.editBox.MaterialEditText
                android:id="@+id/messageBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:maxHeight="@dimen/_70sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/text23Pro_Light"
                android:textSize="@dimen/_13ssp"
                app:customTypeFace="@string/system_regular"
                app:met_baseColor="#646464"
                app:met_clearButton="false"
                app:met_floatingLabel="highlight"
                app:met_isSetAlphaToBaseColor="false" />

            <include
                android:id="@+id/shareAudioBtn"
                layout="@layout/btn_type_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_btn_height"
                android:layout_marginTop="@dimen/_15sdp" />

            <com.view.MTextView
                android:id="@+id/noNeededBtnTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:padding="@dimen/_7sdp"
                android:textAlignment="center"
                android:textColor="@color/text23Pro_Dark"
                android:textSize="@dimen/_14ssp"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="cancel" />
        </LinearLayout>
    </LinearLayout>
</layout>