<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e8"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:elevation="0dp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.view.MTextView
                        android:id="@+id/serviceNameTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textColor="@color/text23Pro_Dark"
                        android:textSize="@dimen/_16ssp"
                        app:customTypeFace="@string/system_semi_bold"
                        tools:text="@string/app_name" />

                    <com.view.MTextView
                        android:id="@+id/qtyTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/appThemeColor_1"
                        android:textSize="@dimen/_16ssp"
                        app:customTypeFace="@string/system_semi_bold"
                        tools:text="x2" />
                </LinearLayout>

                <com.view.MTextView
                    android:id="@+id/subTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_14ssp"
                    app:customTypeFace="@string/system_medium"
                    tools:text="@string/app_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_15sdp" />

                <com.view.MTextView
                    android:id="@+id/commentHTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textColor="@color/appThemeColor_1"
                    android:textSize="@dimen/_12ssp"
                    app:customTypeFace="@string/system_medium"
                    app:textAllCaps="true"
                    tools:text="special Instuction " />

                <com.view.MTextView
                    android:id="@+id/commentVTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_14ssp"
                    app:customTypeFace="@string/system_regular"
                    tools:text="Instuction " />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>