<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appThemeColor_bg_parent_1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A6000000"
            android:clickable="true"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/all_roundcurve_card"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_7sdp"
                android:background="@color/appThemeColor_TXT_1"
                android:gravity="center"
                android:orientation="vertical">

                <com.view.MTextView
                    android:id="@+id/noLocTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_4sdp"
                    android:textColor="@color/text23Pro_Dark"
                    android:textSize="@dimen/_16ssp"
                    app:customTypeFace="@string/system_semi_bold"
                    tools:text="noLocTitleTxt" />

                <com.view.MTextView
                    android:id="@+id/noLocMesageTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_7sdp"
                    android:gravity="center|start"
                    android:textColor="@color/commonText_Light"
                    android:textSize="@dimen/_12ssp"
                    app:customTypeFace="@string/system_regular"
                    tools:text="noLocMesageTxt" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/view23ProBG" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.view.MTextView
                            android:id="@+id/settingBtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/_4sdp"
                            android:textColor="#557855"
                            android:textSize="@dimen/_16ssp"
                            app:customTypeFace="@string/system_medium"
                            tools:text="Settings" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content"
                            android:background="@color/view23ProBG" />

                        <com.view.MTextView
                            android:id="@+id/RetryBtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/text23Pro_Dark"
                            android:textSize="@dimen/_16ssp"
                            app:customTypeFace="@string/system_medium"
                            tools:text="Retry" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>