<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llArea"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_65sdp"
    android:orientation="vertical"
    tools:background="#ffffff">

    <RelativeLayout
        android:id="@+id/contentArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_7sdp">

        <RelativeLayout
            android:id="@+id/mainimagearea"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_centerVertical="true">

            <FrameLayout
                android:id="@+id/imagarea"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <com.view.SelectableRoundedImageView
                        android:id="@+id/carTypeImgView"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:scaleType="centerInside"
                        app:sriv_left_bottom_corner_radius="0dp"
                        app:sriv_left_top_corner_radius="0dp"
                        app:sriv_right_bottom_corner_radius="0dp"
                        app:sriv_right_top_corner_radius="0dp" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/imagareaselcted"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <com.view.SelectableRoundedImageView
                        android:id="@+id/carTypeImgViewselcted"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:scaleType="centerInside"
                        app:sriv_left_bottom_corner_radius="0dp"
                        app:sriv_left_top_corner_radius="0dp"
                        app:sriv_right_bottom_corner_radius="0dp"
                        app:sriv_right_top_corner_radius="0dp" />
                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_toStartOf="@+id/totalFareArea"
            android:layout_toEndOf="@+id/mainimagearea">

            <com.view.MTextView
                android:id="@+id/carTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="@dimen/_13ssp"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="ABC" />

            <com.view.MTextView
                android:id="@+id/personsizeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/carTypeTitle"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="@dimen/_2sdp"
                android:gravity="start"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="5"
                tools:visibility="visible" />

            <com.view.MTextView
                android:id="@+id/carTypeDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carTypeTitle"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:gravity="center|start"
                android:includeFontPadding="false"
                android:minLines="2"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"
                app:customTypeFace="@string/system_regular"
                tools:text="@string/app_name" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/totalFareArea"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <com.view.MTextView
                android:id="@+id/totalfare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:maxLines="3"
                android:textAlignment="viewEnd"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/_11ssp"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="$ 64488.25" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/infoimage"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_information"
                tools:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>